Touch project file to change case of path

--- a/Sparky/BaseHook.vcxproj
+++ b/Sparky/BaseHook.vcxproj
@@ -92,6 +92,10 @@
       <ImportLibrary>.\Debug\sparky.lib</ImportLibrary>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <ProjectReference>
+      <UseLibraryDependencyInputs>
+      </UseLibraryDependencyInputs>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
